--- a/Gastos.Api/Gastos.Api.csproj
+++ b/Gastos.Api/Gastos.Api.csproj
@@ -14,6 +14,7 @@
   </Target>
   
   <ItemGroup>
+    <PackageReference Include="Auth0.AspNetCore.Authentication" />
     <PackageReference Include="DocIntel.Api.Sdk" />
     <PackageReference Include="EFCore.NamingConventions" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
