autenticación con auth0

--- a/Gastos.Pwa/Gastos.Pwa.csproj
+++ b/Gastos.Pwa/Gastos.Pwa.csproj
@@ -8,12 +8,14 @@
     <PackageReference Include="DocIntel.Api.Sdk" />
     <PackageReference Include="FluentValidation" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
+    <!--<PackageReference Include="Microsoft.AspNetCore.Components.Authentication" />-->
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Localization" />
     <PackageReference Include="MudBlazor" />
     <PackageReference Include="Refit" />
     <PackageReference Include="Refit.HttpClientFactory" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" />
   </ItemGroup>
 
   <ItemGroup>
