--- a/Gastos.Pwa/wwwroot/appsettings.json
+++ b/Gastos.Pwa/wwwroot/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Auth0": {
-    "Authority": "",
-    "ClientId": "",
+    "Authority": "https://dev-eyfr0qlg3zkooqow.eu.auth0.com",
+    "ClientId": "AFlQyg8XEEJ358EX9BwYaFLAV6S6ps7x",
     "ResponseType": "code",
     "Scope": "openid profile email"
   }
