--- a/Gastos.Pwa/Gastos.Pwa.csproj
+++ b/Gastos.Pwa/Gastos.Pwa.csproj
@@ -12,6 +12,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Localization" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+    <PackageReference Include="Microsoft.Extensions.Http" />
+    <PackageReference Include="Microsoft.Extensions.Http.Resilience" />
     <PackageReference Include="MudBlazor" />
     <PackageReference Include="Refit" />
     <PackageReference Include="Refit.HttpClientFactory" />
