auth0 bearer handler

--- a/Gastos.Pwa/wwwroot/appsettings.json
+++ b/Gastos.Pwa/wwwroot/appsettings.json
@@ -2,8 +2,16 @@
   "Auth0": {
     "Authority": "https://dev-eyfr0qlg3zkooqow.eu.auth0.com",
     "ClientId": "AFlQyg8XEEJ358EX9BwYaFLAV6S6ps7x",
-    "Audience": "https://gastosapi",
+    "Audience": "https://gastos-api",
     "ResponseType": "code",
     "Scope": "openid profile email"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore.Components.WebAssembly.Authentication": "Debug",
+      "Gastos.Pwa.CustomAuthorizationMessageHandler": "Debug",
+      "System.Net.Http": "Debug"
+    }
   }
 }
