--- a/Gastos.Api/appsettings.json
+++ b/Gastos.Api/appsettings.json
@@ -1,4 +1,19 @@
 {
+  "GastosApi": {
+    "BaseUrl": "",
+    "LockUnauthenticated": true
+  },
+  "DocIntelApi": {
+    "BaseUrl": "",
+    "ApiKey": ""
+  },
+  "ConnectionStrings": {
+    "Default": ""
+  },
+  "Auth0": {
+    "Domain": "",
+    "Audience": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
