--- a/Gastos.Pwa/wwwroot/appsettings.json
+++ b/Gastos.Pwa/wwwroot/appsettings.json
@@ -2,9 +2,7 @@
   "Auth0": {
     "Authority": "https://dev-eyfr0qlg3zkooqow.eu.auth0.com",
     "ClientId": "AFlQyg8XEEJ358EX9BwYaFLAV6S6ps7x",
-    "Audience": "https://gastos-api",
-    "ResponseType": "code",
-    "Scope": "openid profile email"
+    "Audience": "https://gastos-api"
   },
   "Logging": {
     "LogLevel": {
