Enhance deployment, security, and documentation setup
- ✨ Added detailed prompt configuration for autonomous agent workflows in `BeastMode31.prompt.md`
- 📝 Documented Blazor WebApp functionality in `Gastos.prompt.md`
- 🚀 Introduced GitHub Actions CI/CD workflow in `azure-deploy.yml`
- 🔒 Updated CORS policy for environment-specific security in `DependencyInjection.cs`
- ⚡ Optimized Blazor WebAssembly performance in `Gastos.Pwa.csproj`
- 🌐 Configured API base address in `appsettings.json`
- 📂 Updated `.gitignore` to exclude deployment-related files
- 📘 Linked Azure deployment guide in `GastosApp.slnx`
- 📄 Created comprehensive Azure deployment guide in `azure-deployment.md`

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,6 @@ MigrationBackup/
 FodyWeavers.xsd
 /Gastos.Api/appsettings.Development.json
 /Gastos.Pwa/wwwroot/appsettings.Development.json
+/scripts
+/DEPLOYMENT-SUMMARY.md
+/README-Azure.md
