--- a/Gastos.Pwa/wwwroot/appsettings.json
+++ b/Gastos.Pwa/wwwroot/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ApiBaseAddress": "https://jcdcgastosapi.azurewebsites.net/",
   "Auth0": {
     "Authority": "https://dev-eyfr0qlg3zkooqow.eu.auth0.com",
     "ClientId": "AFlQyg8XEEJ358EX9BwYaFLAV6S6ps7x",
