Enable globalization and client-side culture initialization
- 🌐 **Globalization Support**: Enabled `<BlazorWebAssemblyLoadAllGlobalizationData>` in `Gastos.Pwa.csproj` to load all globalization data for multi-culture support.
- 🛠️ **Program Initialization**: Refactored `Program.cs` to include culture initialization via `host.InitializeCultureAsync()` before running the app.
- 📦 **Localization Extensions**: Added `InitializeCultureAsync` method in `LocalizationExtensions.cs` to set culture using `IJSRuntime` and removed outdated `UseMyRequestLocalization` method.
- 🧹 **Code Cleanup**: Removed unused code and improved readability by eliminating commented-out sections.

--- a/Gastos.Pwa/Gastos.Pwa.csproj
+++ b/Gastos.Pwa/Gastos.Pwa.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
-    <BlazorWebAssemblyLoadAllGlobalizationData>false</BlazorWebAssemblyLoadAllGlobalizationData>
+    <BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
   </PropertyGroup>
 
   <ItemGroup>
