Improve PWA auth, error handling, and debugging tools
- ✨ Enhanced `LoginCallback.razor` with error handling UI
- 🛠️ Improved `PWASettings.razor` with debug and install info
- 🔧 Refactored `DeviceInfo` to simplify display mode handling
- 🚀 Enhanced PWA installer logic with fallback support
- 🐛 Updated `service-worker.js` for auth route handling
- 📄 Added `staticwebapps.config.json` for Azure routing
- 🐞 Introduced `auth-debug.js` for authentication debugging
- 🗂️ Updated `manifest.webmanifest` for better PWA behavior
- 🔍 Improved logging and debugging in `index.html` and scripts
- 📝 Documented changes in `PWA-AUTH-FIX-README.md`

--- a/Gastos.Pwa/wwwroot/appsettings.json
+++ b/Gastos.Pwa/wwwroot/appsettings.json
@@ -9,7 +9,7 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore.Components.WebAssembly.Authentication": "Debug",
-      "Gastos.Pwa.CustomAuthorizationMessageHandler": "Debug",
+      "Microsoft.AspNetCore.Authorization": "Debug",
       "System.Net.Http": "Debug"
     }
   }
