Improve PWA auth reliability and debugging tools
- ✨ Enhanced `DebugAuth.razor` with detailed UI for auth state, user claims, logs, and testing actions.
- 🛠️ Added `pwa-routing-check.js` for PWA routing validation and improved `auth-debug.js` with advanced diagnostics.
- 🚀 Updated `service-worker.js` to bypass cache for auth routes and handle network failures gracefully.
- 🔧 Refined `staticwebapps.config.json` with specific routes, no-cache headers, and better fallback handling.
- 📄 Updated `PWA-AUTH-FIX-README.md` with detailed troubleshooting steps, debugging commands, and post-deploy checks.
- 🐛 Fixed caching issues and improved error handling for authentication-related operations.

--- a/Gastos.Pwa/wwwroot/staticwebapps.config.json
+++ b/Gastos.Pwa/wwwroot/staticwebapps.config.json
@@ -1,7 +1,31 @@
 {
   "routes": [
     {
+      "route": "/authentication/login-callback*",
+      "rewrite": "/index.html"
+    },
+    {
+      "route": "/authentication/logout-callback*",
+      "rewrite": "/index.html"
+    },
+    {
+      "route": "/authentication/login-failed*",
+      "rewrite": "/index.html"
+    },
+    {
+      "route": "/authentication/logout-failed*",
+      "rewrite": "/index.html"
+    },
+    {
       "route": "/authentication/*",
+      "rewrite": "/index.html"
+    },
+    {
+      "route": "/debug-auth",
+      "rewrite": "/index.html"
+    },
+    {
+      "route": "/pwa-settings",
       "rewrite": "/index.html"
     },
     {
@@ -25,9 +49,14 @@
   },
   "navigationFallback": {
     "rewrite": "/index.html",
-    "exclude": ["/images/*.{png,jpg,gif}", "/css/*", "/js/*", "/_framework/*", "/_content/*"]
+    "exclude": ["/images/*.{png,jpg,gif}", "/css/*", "/js/*", "/_framework/*", "/_content/*", "/lib/*", "/*.{ico,png,jpg,gif,svg,webmanifest}"]
   },
   "mimeTypes": {
     ".webmanifest": "application/manifest+json"
+  },
+  "globalHeaders": {
+    "Cache-Control": "no-cache, no-store, must-revalidate",
+    "Pragma": "no-cache",
+    "Expires": "0"
   }
 }
