Fix Azure Static Web Apps routing and enhance debugging
- ✨ Simplified `staticwebapps.config.json` by removing wildcards, global headers, and complex `responseOverrides`.
- 🛠️ Added `azure-routing-test.js` for automated routing tests, including query parameter handling.
- 🔧 Enhanced `auth-debug.js` with new methods: `testAzureStaticWebApps`, `getAuth0Configuration`, and improved `testConnectivity`.
- 🖥️ Updated `index.html` to include `azure-routing-test.js` and improved debug tool loading logic.
- 🚀 Improved `testPWARouting` and `generateReport` to include detailed HTTP headers and Azure-specific tests.
- 🗂️ Refactored `staticwebapps.config.json` to explicitly define routes and streamline `navigationFallback`.
- 📋 Documented the fix in `AZURE-ROUTING-FIX.md` with detailed steps, commands, and troubleshooting tips.

--- a/Gastos.Pwa/wwwroot/staticwebapps.config.json
+++ b/Gastos.Pwa/wwwroot/staticwebapps.config.json
@@ -1,23 +1,19 @@
 {
   "routes": [
     {
-      "route": "/authentication/login-callback*",
+      "route": "/authentication/login-callback",
       "rewrite": "/index.html"
     },
     {
-      "route": "/authentication/logout-callback*",
+      "route": "/authentication/logout-callback",
       "rewrite": "/index.html"
     },
     {
-      "route": "/authentication/login-failed*",
+      "route": "/authentication/login-failed",
       "rewrite": "/index.html"
     },
     {
-      "route": "/authentication/logout-failed*",
-      "rewrite": "/index.html"
-    },
-    {
-      "route": "/authentication/*",
+      "route": "/authentication/logout-failed",
       "rewrite": "/index.html"
     },
     {
@@ -27,21 +23,9 @@
     {
       "route": "/pwa-settings",
       "rewrite": "/index.html"
-    },
-    {
-      "route": "/*",
-      "rewrite": "/index.html"
     }
   ],
   "responseOverrides": {
-    "401": {
-      "redirect": "/authentication/login",
-      "statusCode": 302
-    },
-    "403": {
-      "redirect": "/authentication/login",
-      "statusCode": 302
-    },
     "404": {
       "rewrite": "/index.html",
       "statusCode": 200
@@ -49,7 +33,15 @@
   },
   "navigationFallback": {
     "rewrite": "/index.html",
-    "exclude": ["/images/*.{png,jpg,gif}", "/css/*", "/js/*", "/_framework/*", "/_content/*", "/lib/*", "/*.{ico,png,jpg,gif,svg,webmanifest}"]
+    "exclude": [
+      "/images/*",
+      "/css/*",
+      "/js/*",
+      "/_framework/*",
+      "/_content/*",
+      "/lib/*",
+      "*.{ico,png,jpg,gif,svg,webmanifest,json}"
+    ]
   },
   "mimeTypes": {
     ".webmanifest": "application/manifest+json"
