Include staticwebapps.config.json and simplify routes
- ✨ Added `<ItemGroup>` in `Gastos.Pwa.csproj` to include `staticwebapps.config.json` in deployment with `PreserveNewest` copy behavior.
- 🔥 Removed specific route definitions from `staticwebapps.config.json` for authentication and other paths.
- 🛠️ Simplified `staticwebapps.config.json` by keeping only `navigationFallback` to rewrite unmatched routes to `/index.html`.

--- a/Gastos.Pwa/Gastos.Pwa.csproj
+++ b/Gastos.Pwa/Gastos.Pwa.csproj
@@ -29,4 +29,9 @@
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
 
+  <!-- Asegurar que staticwebapps.config.json se incluya en el deploy -->
+  <ItemGroup>
+    <Content Include="wwwroot\staticwebapps.config.json" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
+
 </Project>
