Update navigationFallback exclusions in config file
- ✨ Added `/staticwebapp.config.json` to exclusions to prevent rewrite.
- ✨ Added `/appsettings*.json` to exclusions for direct serving.
- ✨ Added `/_framework/*` to exclusions to handle framework files.
- ✨ Added `/api/*` to exclusions to allow API routes to be served directly.
- 🔧 Ensured additional paths and files are excluded from fallback behavior.

--- a/Gastos.Pwa/wwwroot/staticwebapp.config.json
+++ b/Gastos.Pwa/wwwroot/staticwebapp.config.json
@@ -27,7 +27,16 @@
   ],
   "navigationFallback": {
     "rewrite": "/index.html",
-    "exclude": ["/images/*.{png,jpg,gif,ico}", "/css/*", "/js/*", "/*.{js,css,woff,woff2,ttf,svg,ico,png,jpg,gif}"]
+    "exclude": [
+      "/images/*.{png,jpg,gif,ico}",
+      "/css/*",
+      "/js/*",
+      "/*.{js,css,woff,woff2,ttf,svg,ico,png,jpg,gif}",
+      "/staticwebapp.config.json",
+      "/appsettings*.json",
+      "/_framework/*",
+      "/api/*"
+    ]
   },
   "responseOverrides": {
     "401": {
