Update routing and version info for staticwebapp.config.json
- ✨ Updated `HomePage.razor` to reflect version 16 and added a note about the specific route for `staticwebapp.config.json`.
- 🛠️ Added a route to serve `staticwebapp.config.json` with anonymous access.
- 🛠️ Added a route to serve `appsettings*.json` as `appsettings.json` with anonymous access.
- 🔧 Modified `navigationFallback` to remove exclusions for `staticwebapp.config.json` and `appsettings*.json`.
- 🔧 Adjusted file type exclusions to include `.json` files in the fallback rewrite rule.

--- a/Gastos.Pwa/wwwroot/staticwebapp.config.json
+++ b/Gastos.Pwa/wwwroot/staticwebapp.config.json
@@ -1,6 +1,16 @@
 {
   "routes": [
     {
+      "route": "/staticwebapp.config.json",
+      "serve": "/staticwebapp.config.json",
+      "allowedRoles": ["anonymous"]
+    },
+    {
+      "route": "/appsettings*.json",
+      "serve": "/appsettings.json",
+      "allowedRoles": ["anonymous"]
+    },
+    {
       "route": "/authentication/login-callback",
       "allowedRoles": ["anonymous"]
     },
@@ -28,12 +38,10 @@
   "navigationFallback": {
     "rewrite": "/index.html",
     "exclude": [
-      "/images/*.{png,jpg,gif,ico}",
-      "/css/*",
-      "/js/*",
-      "/*.{js,css,woff,woff2,ttf,svg,ico,png,jpg,gif}",
-      "/staticwebapp.config.json",
-      "/appsettings*.json",
+      "/images/*.{png,jpg,gif,ico}", 
+      "/css/*", 
+      "/js/*", 
+      "/*.{js,css,woff,woff2,ttf,svg,ico,png,jpg,gif,json}",
       "/_framework/*",
       "/api/*"
     ]
