Refactor authentication and PWA debugging features - v24
- 🔥 Removed `AuthTest.razor` and `PwaUpdateNotification.razor` components, consolidating their functionality.
- 🛠️ Updated `DebugPage.razor` to use `/debug` route with collapsible claims UI.
- 🚀 Replaced `<UpdateAvailableDetector />` with `<PwaUpdateAvailableMonitor />` in `MainLayout.razor`.
- 🐛 Simplified `auth-debug.js` by removing `Auth0 Well-Known` test.
- 📄 Updated `PWA_UPDATE_FIXES.md` to reflect new PWA update mechanisms.
- 🗺️ Updated `staticwebapp.config.json` to remove `/debug-auth` and `/auth-test` routes.
- 🎨 Renamed `<PWAStatusCard />` to `<PwaStatusCard />` for consistency.
- 🔄 Incremented version display on `HomePage.razor` from 23 to 24.

These changes simplify the codebase, improve maintainability, and enhance the user experience for debugging and PWA updates.

--- a/Gastos.Pwa/wwwroot/staticwebapp.config.json
+++ b/Gastos.Pwa/wwwroot/staticwebapp.config.json
@@ -17,11 +17,7 @@
       "allowedRoles": ["anonymous"]
     },
     {
-      "route": "/debug-auth",
-      "allowedRoles": ["anonymous"]
-    },
-    {
-      "route": "/auth-test",
+      "route": "/debug",
       "allowedRoles": ["anonymous"]
     }
   ],
