Refactor PWA update system with robust enhancements - v41
- ✨ Replaced `<PwaUpdateMonitor />` with `<PwaUpdateAvailableMonitor />` for improved update handling.
- 🔄 Migrated to `pwaUpdater` for service worker management, replacing `sw-registrator.js`.
- 🧪 Added `pwa-update-tester.js` for debugging and testing PWA updates.
- 🚀 Enhanced `pwa-updater.js` with better logging, periodic checks, and new utility methods.
- 🛠️ Improved `service-worker.published.js` with robust caching, activation, and messaging logic.
- 🗂️ Updated `staticwebapp.config.json` to prevent caching of service worker files.
- 🧹 Cleaned up old service worker registration logic and added global debugging tools.

--- a/Gastos.Pwa/wwwroot/staticwebapp.config.json
+++ b/Gastos.Pwa/wwwroot/staticwebapp.config.json
@@ -19,6 +19,42 @@
     {
       "route": "/debug",
       "allowedRoles": ["anonymous"]
+    },
+    {
+      "route": "/service-worker.js",
+      "headers": {
+        "cache-control": "no-cache, no-store, must-revalidate",
+        "pragma": "no-cache",
+        "expires": "0"
+      },
+      "allowedRoles": ["anonymous"]
+    },
+    {
+      "route": "/service-worker.published.js",
+      "headers": {
+        "cache-control": "no-cache, no-store, must-revalidate",
+        "pragma": "no-cache",
+        "expires": "0"
+      },
+      "allowedRoles": ["anonymous"]
+    },
+    {
+      "route": "/service-worker-assets.js",
+      "headers": {
+        "cache-control": "no-cache, no-store, must-revalidate",
+        "pragma": "no-cache",
+        "expires": "0"
+      },
+      "allowedRoles": ["anonymous"]
+    },
+    {
+      "route": "/manifest.webmanifest",
+      "headers": {
+        "cache-control": "no-cache, no-store, must-revalidate",
+        "pragma": "no-cache",
+        "expires": "0"
+      },
+      "allowedRoles": ["anonymous"]
     }
   ],
   "navigationFallback": {
@@ -29,7 +65,8 @@
       "/js/*", 
       "/*.{js,css,woff,woff2,ttf,svg,ico,png,jpg,gif,json}",
       "/_framework/*",
-      "/api/*"
+      "/api/*",
+      "/service-worker*.js"
     ]
   },
   "responseOverrides": {
