--- a/Gastos.Pwa/wwwroot/staticwebapp.config.json
+++ b/Gastos.Pwa/wwwroot/staticwebapp.config.json
@@ -25,7 +25,8 @@
       "headers": {
         "cache-control": "no-cache, no-store, must-revalidate",
         "pragma": "no-cache",
-        "expires": "0"
+        "expires": "0",
+        "content-type": "application/javascript"
       },
       "allowedRoles": ["anonymous"]
     },
@@ -34,7 +35,8 @@
       "headers": {
         "cache-control": "no-cache, no-store, must-revalidate",
         "pragma": "no-cache",
-        "expires": "0"
+        "expires": "0",
+        "content-type": "application/javascript"
       },
       "allowedRoles": ["anonymous"]
     },
@@ -43,7 +45,8 @@
       "headers": {
         "cache-control": "no-cache, no-store, must-revalidate",
         "pragma": "no-cache",
-        "expires": "0"
+        "expires": "0",
+        "content-type": "application/javascript"
       },
       "allowedRoles": ["anonymous"]
     },
@@ -89,6 +92,7 @@
     ".dll": "application/octet-stream",
     ".blat": "application/octet-stream",
     ".br": "application/x-brotli",
-    ".gz": "application/gzip"
+    ".gz": "application/gzip",
+    ".js": "application/javascript"
   }
 }
