Enhance PWA functionality, service worker, and build process - v47
- ✨ Updated **HomePage.razor** to reflect version change to "Versión 47".
- ⚙️ Modified **Gastos.Pwa.csproj** to disable compression and include additional configuration files in the publish output.
- 🛠️ Added **.htaccess** to configure MIME types and caching policies for service worker files.
- 🚀 Enhanced **pwa-updater.js** with a robust service worker registration strategy, fallback creation, and improved error handling.
- 🗂️ Updated **staticwebapp.config.json** to adjust routing, MIME types, and platform settings.
- 🌐 Added **web.config** for IIS to configure MIME types, caching rules, and SPA fallback.
- 🔧 Introduced **build-pwa.bat** and **build-pwa.sh** scripts to automate and validate the PWA build process.

--- a/Gastos.Pwa/Gastos.Pwa.csproj
+++ b/Gastos.Pwa/Gastos.Pwa.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
     <BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
+    <BlazorEnableCompression>false</BlazorEnableCompression>
   </PropertyGroup>
 
   <ItemGroup>
@@ -27,6 +28,13 @@
 
   <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
+  </ItemGroup>
+
+  <!-- Asegurar que los archivos de configuración se incluyan en el publish -->
+  <ItemGroup>
+    <None Include="wwwroot\staticwebapp.config.json" />
+    <None Include="wwwroot\web.config" />
+    <None Include="wwwroot\.htaccess" />
   </ItemGroup>
 
 </Project>
