--- a/Gastos.Pwa/wwwroot/staticwebapp.config.json
+++ b/Gastos.Pwa/wwwroot/staticwebapp.config.json
@@ -19,45 +19,6 @@
     {
       "route": "/debug",
       "allowedRoles": ["anonymous"]
-    },
-    {
-      "route": "/service-worker.js",
-      "headers": {
-        "cache-control": "no-cache, no-store, must-revalidate",
-        "pragma": "no-cache",
-        "expires": "0",
-        "content-type": "application/javascript"
-      },
-      "allowedRoles": ["anonymous"]
-    },
-    {
-      "route": "/service-worker.published.js",
-      "headers": {
-        "cache-control": "no-cache, no-store, must-revalidate",
-        "pragma": "no-cache",
-        "expires": "0",
-        "content-type": "application/javascript"
-      },
-      "allowedRoles": ["anonymous"]
-    },
-    {
-      "route": "/service-worker-assets.js",
-      "headers": {
-        "cache-control": "no-cache, no-store, must-revalidate",
-        "pragma": "no-cache",
-        "expires": "0",
-        "content-type": "application/javascript"
-      },
-      "allowedRoles": ["anonymous"]
-    },
-    {
-      "route": "/manifest.webmanifest",
-      "headers": {
-        "cache-control": "no-cache, no-store, must-revalidate",
-        "pragma": "no-cache",
-        "expires": "0"
-      },
-      "allowedRoles": ["anonymous"]
     }
   ],
   "navigationFallback": {
@@ -66,10 +27,11 @@
       "/images/*.{png,jpg,gif,ico}", 
       "/css/*", 
       "/js/*", 
-      "/*.{js,css,woff,woff2,ttf,svg,ico,png,jpg,gif,json}",
+      "/*.{js,css,woff,woff2,ttf,svg,ico,png,jpg,gif,json,webmanifest}",
       "/_framework/*",
       "/api/*",
-      "/service-worker*.js"
+      "/service-worker*.js",
+      "/sw-*.js"
     ]
   },
   "responseOverrides": {
@@ -93,6 +55,14 @@
     ".blat": "application/octet-stream",
     ".br": "application/x-brotli",
     ".gz": "application/gzip",
-    ".js": "application/javascript"
+    ".js": "application/javascript; charset=utf-8",
+    ".webmanifest": "application/manifest+json"
+  },
+  "platform": {
+    "apiRuntime": "node:18"
+  },
+  "forwardingGateway": {
+    "allowedForwardedHosts": [],
+    "requiredHeaders": {}
   }
 }
