--- a/.github/workflows/auto-version.yml
+++ b/.github/workflows/auto-version.yml
@@ -6,6 +6,11 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+# Permisos necesarios para el workflow
+permissions:
+  contents: write  # Necesario para crear tags y releases
+  packages: read   # Necesario para leer paquetes si los hay
+
 jobs:
   version-and-tag:
     runs-on: ubuntu-latest
@@ -14,6 +19,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0  # Obtener todo el historial para análisis de commits
+        token: ${{ secrets.GITHUB_TOKEN }}  # Usar token explícitamente
         
     - name: Determine Version Bump
       id: version
@@ -31,6 +37,13 @@ jobs:
         
         echo "Commits since last tag:"
         echo "$COMMITS"
+        
+        # Si no hay commits nuevos, salir
+        if [ -z "$COMMITS" ]; then
+          echo "No new commits since last tag"
+          echo "skip=true" >> $GITHUB_OUTPUT
+          exit 0
+        fi
         
         # Determinar el tipo de bump basado en conventional commits
         BUMP_TYPE="patch"
@@ -75,6 +88,11 @@ jobs:
         NEW_VERSION="v${MAJOR}.${MINOR}.${PATCH}"
         echo "New version: $NEW_VERSION"
         echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
+        
+        # Guardar commits para el release
+        echo "commits<<EOF" >> $GITHUB_OUTPUT
+        echo "$COMMITS" >> $GITHUB_OUTPUT
+        echo "EOF" >> $GITHUB_OUTPUT
 
     - name: Create Tag
       if: steps.version.outputs.skip != 'true'
@@ -83,23 +101,31 @@ jobs:
         git config user.email "github-actions[bot]@users.noreply.github.com"
         
         NEW_VERSION="${{ steps.version.outputs.new_version }}"
+        
+        # Crear tag localmente
         git tag -a "$NEW_VERSION" -m "Release $NEW_VERSION"
+        
+        # Hacer push del tag usando el token
         git push origin "$NEW_VERSION"
         
         echo "Created and pushed tag: $NEW_VERSION"
 
     - name: Create Release
       if: steps.version.outputs.skip != 'true'
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v1
       with:
         tag_name: ${{ steps.version.outputs.new_version }}
-        release_name: Release ${{ steps.version.outputs.new_version }}
+        name: Release ${{ steps.version.outputs.new_version }}
         draft: false
         prerelease: false
         body: |
-          Automatic release ${{ steps.version.outputs.new_version }}
+          🚀 **Automatic release ${{ steps.version.outputs.new_version }}**
           
-          Changes since last release:
+          ## Changes since last release:
+          ```
           ${{ steps.version.outputs.commits }}
+          ```
+          
+          ---
+          *This release was created automatically based on conventional commits.*
+        token: ${{ secrets.GITHUB_TOKEN }}
