Update GitHub Actions and improve date parsing logic
- 🔒 Updated permissions in `auto-version.yml` and `manual-version.yml` to include `actions: read` for workflow access.
- 🏷️ Refactored "Create Tag" steps to include `GITHUB_TOKEN` for authentication and updated GitHub Actions bot email.
- 🚀 Upgraded `softprops/action-gh-release` from `v1` to `v2`.
- 📂 Added `/e` to `.gitignore`.
- 🗑️ Removed unused `BeginLogout` method in `DebugPage.razor`.
- 🕒 Improved date parsing in `VersionInfo.cs` using `CultureInfo.InvariantCulture`.
- 🔄 Updated `version-info.json` with new build number, commit hash, and timestamps.

--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,4 @@ FodyWeavers.xsd
 /DEPLOYMENT-SUMMARY.md
 /README-Azure.md
 /publish-output
+/e v1.0.1 Corrección de permisos GitHub Actions } finally { if ($) { echo 28658df509d44d13b4818284bcd4965c=$ } else { echo 28658df509d44d13b4818284bcd4965c=$ } }
