--- a/.github/workflows/manual-version.yml
+++ b/.github/workflows/manual-version.yml
@@ -18,8 +18,10 @@ on:
         required: false
         type: string
 
+# Permisos necesarios para crear tags y releases
 permissions:
-  contents: write
+  contents: write    # Necesario para crear tags
+  actions: read      # Necesario para leer el workflow
 
 jobs:
   create-version:
@@ -29,6 +31,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
+        # Usar el token con permisos explícitos
         token: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Calculate New Version
@@ -94,21 +97,29 @@ jobs:
         echo "$COMMITS" >> $GITHUB_OUTPUT
         echo "EOF" >> $GITHUB_OUTPUT
 
-    - name: Create Tag and Release
+    - name: Create Tag and Push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
+        # Configurar git con el bot de GitHub Actions
         git config user.name "github-actions[bot]"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
         
         NEW_VERSION="${{ steps.version.outputs.new_version }}"
         
-        # Crear tag
+        # Crear tag localmente
         git tag -a "$NEW_VERSION" -m "Release $NEW_VERSION"
+        
+        # Configurar la URL remota con el token
+        git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git
+        
+        # Push del tag
         git push origin "$NEW_VERSION"
         
         echo "Created and pushed tag: $NEW_VERSION"
 
     - name: Create Release
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v2
       with:
         tag_name: ${{ steps.version.outputs.new_version }}
         name: Release ${{ steps.version.outputs.new_version }}
