Add OpenTelemetry tracing and update dependencies
- ✨ Added `Azure.Monitor.OpenTelemetry.AspNetCore` package for centralized version management and project references.
- 🔧 Configured OpenTelemetry tracing in `DependencyInjection.cs`:
  - Development: OTLP exporter to `http://localhost:4317`.
  - Production: Azure Monitor integration.
- ♻️ Changed repository service lifetimes in `DatabaseExtensions.cs` from `Transient` to `Scoped`.
- 🛠️ Updated `version-info.json` with new build (`138`) and commit (`d373802`).

--- a/Gastos.Api/Gastos.Api.csproj
+++ b/Gastos.Api/Gastos.Api.csproj
@@ -14,6 +14,7 @@
   </Target>
   
   <ItemGroup>   
+    <PackageReference Include="Azure.Monitor.OpenTelemetry.AspNetCore" />   
     <PackageReference Include="DocIntel.Api.Sdk" />
     <PackageReference Include="EFCore.NamingConventions" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
