Refactor DI, endpoints, and manifest; improve consistency
- ✨ **Refactored Dependency Injection methods**: Renamed methods to remove "My" prefix for consistency and clarity.
- 🛠️ **Simplified endpoint logic**: Streamlined logging, replaced redundant calls to `httpContext.GetUserId()` with `userId`, and removed unnecessary debug logs.
- 🌐 **Updated manifest and icons**: Replaced icons with new `maskable_icon_blue` images and adjusted manifest formatting.
- 📦 **Added new dependencies**: Included `Microsoft.AspNetCore.Components.WebAssembly` and `Refit` in `Gastos.Shared.csproj`.
- 🐛 **Fixed telemetry services naming**: Renamed `AddMyTelemetryServices` to `AddTelemetryServices` and updated logging configuration.
- 🧹 **General cleanup**: Removed unused namespaces, improved code readability, and aligned method chaining.
- 🔖 **Version bump**: Updated `version-info.json` to reflect build `146` and commit `d635771`.

--- a/Gastos.Shared/Gastos.Shared.csproj
+++ b/Gastos.Shared/Gastos.Shared.csproj
@@ -1,7 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <PackageReference Include="FluentValidation" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="Refit" />
   </ItemGroup>
 </Project>
