--- a/Gastos.Api/appsettings.json
+++ b/Gastos.Api/appsettings.json
@@ -14,6 +14,9 @@
     "Domain": "",
     "Audience": ""
   },
+  "AzureMonitor": {
+    "ConnectionString": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
